# dashfront

./: .buildinfo  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  table_of_contents.html
.github/workflows/: ci.yml
_sources/: index.rst.txt
tests/: test_smoke.py
